[SONAR] cleanup deprecated methods