@@ -130,9 +130,7 @@ public class JsonOutputTest extends TestCase {
     String dummyTransformName = "dummy transform";
     DummyMeta dm1 = new DummyMeta();
     String dummyPid1 = registry.getPluginId(TransformPluginType.class, dm1);
-    TransformMeta dummyTransform = new TransformMeta(dummyPid1, dummyTransformName, dm1);
-
-    return dummyTransform;
+    return new TransformMeta(dummyPid1, dummyTransformName, dm1);
   }
 
   /**
@@ -146,16 +144,16 @@ public class JsonOutputTest extends TestCase {
 
     IRowMeta rowMetaInterface = createResultRowMeta();
 
-    Object[] r1 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r2 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r3 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r4 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r5 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r6 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r7 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r8 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r9 = new Object[] {new Long(1L), "Orlando", "Florida"};
-    Object[] r10 = new Object[] {new Long(1L), "Orlando", "Florida"};
+    Object[] r1 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r2 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r3 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r4 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r5 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r6 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r7 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r8 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r9 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
+    Object[] r10 = new Object[] {Long.valueOf(1L), "Orlando", "Florida"};
 
     list.add(new RowMetaAndData(rowMetaInterface, r1));
     list.add(new RowMetaAndData(rowMetaInterface, r2));
@@ -233,9 +231,6 @@ public class JsonOutputTest extends TestCase {
 
     // initialize the fields
     List<JsonOutputField> fields = new ArrayList<>();
-    //    for (int idx = 0; idx < fields.length; idx++) {
-    //      fields[idx] = new JsonOutputField();
-    //    }
 
     // populate the fields
     // it is important that the setPosition(int)
@@ -296,9 +291,9 @@ public class JsonOutputTest extends TestCase {
     pipelineMeta.addTransform(rowGeneratorTransform);
 
     // create a PipelineHopMeta for injector and add it to the pipelineMeta
-    PipelineHopMeta hop_injectoryRowGenerator =
+    PipelineHopMeta hopInjectoryRowGenerator =
         new PipelineHopMeta(injectorTransform, rowGeneratorTransform);
-    pipelineMeta.addPipelineHop(hop_injectoryRowGenerator);
+    pipelineMeta.addPipelineHop(hopInjectoryRowGenerator);
 
     // create the json output transform
     // but first lets get a filename
@@ -309,9 +304,9 @@ public class JsonOutputTest extends TestCase {
     pipelineMeta.addTransform(jsonOutputTransform);
 
     // create a PipelineHopMeta for jsonOutputTransform and add it to the pipelineMeta
-    PipelineHopMeta hop_RowGeneratorOutputTextFile =
+    PipelineHopMeta hopRowGeneratorOutputTextFile =
         new PipelineHopMeta(rowGeneratorTransform, jsonOutputTransform);
-    pipelineMeta.addPipelineHop(hop_RowGeneratorOutputTextFile);
+    pipelineMeta.addPipelineHop(hopRowGeneratorOutputTextFile);
 
     // Create a dummy transform and add it to the tranMeta
     String dummyTransformName = "dummy transform";
@@ -319,9 +314,9 @@ public class JsonOutputTest extends TestCase {
     pipelineMeta.addTransform(dummyTransform);
 
     // create a PipelineHopMeta for the
-    PipelineHopMeta hopOutputJson_dummyTransform =
+    PipelineHopMeta hopOutputJsonDummyTransform =
         new PipelineHopMeta(jsonOutputTransform, dummyTransform);
-    pipelineMeta.addPipelineHop(hopOutputJson_dummyTransform);
+    pipelineMeta.addPipelineHop(hopOutputJsonDummyTransform);
 
     // Now execute the transformation...
     Pipeline pipeline = new LocalPipelineEngine(pipelineMeta);
@@ -332,15 +327,12 @@ public class JsonOutputTest extends TestCase {
     TransformRowsCollector dummyRowCollector = new TransformRowsCollector();
     dummyITransform.addRowListener(dummyRowCollector);
 
-    // RowProducer rowProducer = pipeline.addRowProducer(injectorTransformName, 0);
     pipeline.startThreads();
     pipeline.waitUntilFinished();
 
     // get the results and return it
     File outputFile = new File(jsonFileName + ".js");
-    String jsonStructure = FileUtils.readFileToString(outputFile);
-
-    return jsonStructure;
+    return FileUtils.readFileToString(outputFile);
   }
 
   // The actual tests
